syntax = "proto3";

package test;

option go_package =
    "github.com/srikrsna/nidhi/internal/protoc-gen-nidhi/test_data;pb";

import "nidhi/nidhi.proto";

message All {
  option(nidhi.prefix) = 'all';

  string id = 1;
  string string_field = 2;
  int32 int32_field = 3;
  int64 int64_field = 4;
  uint32 uint32_field = 5;
  uint64 uint64_field = 6;
  float float_field = 7;
  double double_field = 8;
  bool bool_field = 9;
  bytes bytes_field = 10;
  repeated string primitive_repeated = 11;

  oneof one_of {
    string string_one_of = 12;
    int32 int32_one_of = 13;
    int64 int64_one_of = 14;
    uint32 uint32_one_of = 15;
    uint64 uint64_one_of = 16;
    float float_one_of = 17;
    double double_one_of = 18;
    bool bool_one_of = 19;
    bytes bytes_one_of = 20;
    Simple simple_object_one_of = 21;
  }

  Simple simple_object_field = 22;

  repeated Simple simple_repeated = 23;
}

message Simple {
  string string_field = 1;
}
